--- a/EsGit2210/MainWindow.xaml
+++ b/EsGit2210/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:EsGit2210"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid RenderTransformOrigin="0.43,0.568">
+        <TextBox x:Name="txt_input" HorizontalAlignment="Left" Height="23" Margin="273,119,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lbl_output" Content="" HorizontalAlignment="Left" Margin="430,116,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
